--- a/trunk/Studie1/Studie1/Properties/Resources.resx
+++ b/trunk/Studie1/Studie1/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="greeting" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\greeting.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="greeting_v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\greeting_v2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
